# beecrawl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.bee-engine  Dockerfile.rust  LICENSE  Makefile  README.md  docker-compose.yml  docs.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-ack.yml  publish-images.yml
apps/api/: Cargo.toml
apps/api/beecrawl/: app.py  models.py
apps/api/beecrawl/search/: __init__.py  providers.py  service.py
apps/api/beecrawl/web_extract/: __init__.py  service.py
apps/api/beecrawl/web_extract/providers/: browser.py  http_static.py
apps/api/migrations/: 0001_crawl_jobs.sql  20260710073500_add_crawl_lifecycle_controls.sql  20260710075837_add_batch_scrape_job_type.sql  20260710081018_create_scrape_cache.sql  20260715090000_add_crawl_skip_tls_verification.sql  20260718120000_add_crawl_robots_policy.sql  20260718121000_add_crawl_path_filters.sql  20260718122000_add_crawl_domain_policy.sql  20260718123000_add_job_throttling.sql  20260718124000_add_similar_url_dedup.sql  20260718125000_create_idempotency_keys.sql  20260718130000_add_job_webhooks.sql  20260718131000_add_job_proxy.sql  20260718132000_add_job_actions.sql  20260718133000_create_workflows.sql  README.md
apps/api/src/: cache.rs  crawl.rs  lib.rs  limits.rs  llm.rs  main.rs  metrics.rs  models.rs  pdf.rs  routes.rs  search.rs  web_extract.rs  webhook.rs  workflows.rs
apps/api/tests/: test_extractor.py  test_web_extract.py
apps/api/tests/fixtures/: article.html  catalog.html
apps/bee-engine/bee_engine/: __init__.py  app.py  browser.py  document_parser.py  jobs.py  models.py  sessions.py
apps/bee-engine/tests/: test_bee_engine.py  test_document_parser.py  test_sessions.py  test_ssrf.py
apps/python-sdk/: README.md  pyproject.toml
apps/python-sdk/beecrawl_sdk/: client.py
apps/rust-sdk/: README.md
apps/sdk/node/: README.md  package.json
apps/sdk/node/src/: index.ts
apps/sdk/node/tests/: client.test.mjs
apps/sdk/python/: README.md  pyproject.toml
apps/sdk/python/beecrawl_sdk/: __init__.py  client.py
apps/sdk/python/tests/: test_client.py
apps/sdk/rust/: Cargo.toml  README.md
apps/sdk/rust/src/: lib.rs
apps/web/: README.md  package.json
apps/web/src/components/: SiteHeader.astro
apps/web/src/pages/: docs.astro  index.astro
apps/web/src/pages/products/: [product].astro
apps/web/src/styles/: global.css
beecrawl/: __init__.py  app.py  extractor.py  models.py
beecrawl/web_extract/: errors.py
beecrawl/web_extract/providers/: __init__.py  browser.py
docs/: async-jobs.mdx  authentication.mdx  bee-engine.md  browser-rendering.md  browser-rendering.mdx  firecrawl-compatibility.mdx  firecrawl-gap-todo.md  introduction.mdx  markdown-conversion-todo.md  openapi.json  openapi.yaml  quickstart.mdx  sdk-node.mdx  sdk-python.mdx  sdk-rust.mdx  self-hosting.mdx
infra/charts/beecrawl/: Chart.yaml  README.md  values-production.example.yaml  values-production.yaml  values.yaml
infra/charts/beecrawl/templates/: _helpers.tpl  api-deployment.yaml  api-ingress.yaml  api-service.yaml  bee-engine-deployment.yaml  bee-engine-service.yaml  migration-job.yaml  worker-deployment.yaml
infra/deployment/: README.md
scripts/: firecrawl_v2_contract.py  new-migration.sh  sqlx.sh
scripts/deploy/: prepare-ack.sh
tests/: test_extractor.py  test_web_extract.py
