[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beecrawl"
version = "0.1.0"
description = "Open-source infrastructure for crawling, extracting, and structuring web data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BeeCrawl contributors" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "markdownify>=1.2.0",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
browser = [
  "playwright==1.61.0"
]
fingerprint = [
  "curl-cffi>=0.11.0"
]
documents = [
  "odfpy>=1.4.1",
  "openpyxl>=3.1.5",
  "pillow>=11.0.0",
  "pymupdf>=1.25.0",
  "pytesseract>=0.3.13",
  "python-docx>=1.1.2",
  "striprtf>=0.0.29",
  "xlrd>=2.0.1"
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.package-dir]
"" = "apps/bee-engine"

[tool.setuptools.packages.find]
where = ["apps/bee-engine"]

[tool.pytest.ini_options]
testpaths = ["apps/bee-engine/tests", "apps/sdk/python/tests"]
pythonpath = ["apps/bee-engine", "apps/sdk/python"]
