[package]
name = "beecrawl-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ego-tree = "0.10"
html-escape = "0.2"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = "0.34"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
