[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beecrawl-py"
version = "0.1.0"
description = "Python HTTP SDK for the BeeCrawl API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["beecrawl_sdk*"]
